--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,16 @@ aiosignal==1.2.0
 asgiref==3.5.2
 async-timeout==4.0.2
 attrs==19.1.0
-beautifulsoup4==4.11.1
+beautifulsoup4==4.9.3
+certifi==2022.6.15
 cffi==1.15.0
+chardet==4.0.0
 charset-normalizer==2.1.0
 click==8.1.3
 Flask==2.1.2
 frozenlist==1.3.0
-idna==3.3
+googlesearch-python==1.1.0
+idna==2.10
 importlib-metadata==4.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -21,8 +24,10 @@ multidict==6.0.2
 proxybroker==0.3.2
 pycares==4.2.0
 pycparser==2.21
+requests==2.25.1
 schemdraw==0.15
 soupsieve==2.3.2.post1
+urllib3==1.26.9
 Werkzeug==2.1.2
 yarl==1.7.2
 zipp==3.8.0
